<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <ImageView
            android:id="@+id/iv_project_icon"
            android:layout_width="134dp"
            android:layout_height="139dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/iv_project_icon"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="67dp"
            android:layout_height="29dp"
            android:layout_marginLeft="30dp"
            android:text="@string/account"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/et_account"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="239dp"
            android:layout_height="42dp"
            android:layout_marginLeft="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/plesase_input_account"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/tv_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_account"
            app:layout_constraintVertical_bias="0.384"
            tools:targetApi="o" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.84" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="65dp"
            android:layout_height="37dp"
            android:layout_marginLeft="30dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/et_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account"
            app:layout_constraintVertical_bias="0.266" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="243dp"
            android:layout_height="42dp"
            android:layout_marginLeft="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/plesase_input_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_password"
            tools:targetApi="o" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="332dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#92F4E9E9"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />



        <View
            android:id="@+id/tv_vertical_line"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/tv_forget_password"
            app:layout_constraintEnd_toStartOf="@+id/tv_to_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_forget_password"
            app:layout_constraintTop_toTopOf="@+id/tv_forget_password"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/forget_password"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_vertical_line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vertical_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_vertical_line"
            app:layout_constraintTop_toTopOf="@+id/tv_vertical_line"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="160dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/app_name"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_project_icon"
            tools:layout_editor_absoluteX="126dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>